Fixed footer styling issue on firefox

--- a/app/styles/less/style.less
+++ b/app/styles/less/style.less
@@ -68,7 +68,7 @@ body {
 #header {
   width: 100%;
   flex: 0 0 auto;
-  margin-bottom: 1rem;
+  //margin-bottom: 1rem;
   h1 {
     margin: 1.5rem 0 0.5rem 0;
     text-align: center;
@@ -78,7 +78,7 @@ body {
 
   //colors
   background: @primary;
-  border-bottom: @primary-darker;
+  border-bottom: 1px solid @primary-dark;
 }
 
 #nav {
@@ -88,10 +88,13 @@ body {
 
 #main-content {
   width: 60%;
-  margin: 1.5rem auto 1.5rem auto;
+  margin: 0 auto 0 auto;
   padding: 0 1.5rem;
   overflow-y: auto;
   flex: 1 1 auto;
+  & > div:first-child > *:first-child {
+    margin-top: 1.5rem;
+  }
   @media screen and (max-width: 1023px) {
     width: 75%;
   }
@@ -102,20 +105,19 @@ body {
 
 #footer {
   width: 100%;
-  height: 3rem;
+  height: 2.9rem;
   flex: 0 0 auto;
   background: @primary;
-  border-top: @primary-darker;
+  border-top: 1px solid @primary-dark;
 
   .footer {
     width: 90%;
     height: 100%;
     margin: 0 auto;
-    padding: 3px 5% 0 5%;
     text-align: center;
   }
   .glyphicon {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     color: @sec-two;
   }
 }
